refactor: 헤더 조회 네이밍 개선